--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,8 +7,23 @@
     <%= devise_error_messages! %>
 
     <div class="form-group">
+      <%= f.label :first_name %><br />
+      <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", :class => "form-control"  %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :last_name %><br />
+      <%= f.text_field :last_name, autocomplete: "last_name", :class => "form-control"  %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :country %><br />
+      <%= f.text_field :country, autocomplete: "country", :class => "form-control"  %>
+    </div>
+
+    <div class="form-group">
       <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => "form-control"  %>
+      <%= f.email_field :email, autocomplete: "email", :class => "form-control"  %>
     </div>
 
     <div class="form-group">
