--- a/app/views/contract_revisions/_contract_user_rating.html.erb
+++ b/app/views/contract_revisions/_contract_user_rating.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@contract.contract_user_ratings.build(:contract_id => @contract.id, :user_id => current_user.id), html: { class: 'edit-rating' }) do |f| %>
+<%= form_for(@contract_revision.contract_user_ratings.build(:contract_revision_id => @contract_revision.id, :user_id => current_user.id), html: { class: 'edit-rating' }) do |f| %>
   <fieldset>
     <div class="form-group row">
       <%= f.label :rating, "User Rating", :class => "col-3 col-form-label" %>
@@ -13,7 +13,7 @@
         <%= f.select :rating, ContractUserRating::USER_RATINGS, {} ,{class: 'form-control'} %>
       </div>
     </div>
-    <div><%= f.hidden_field :contract_id %></div>
+    <div><%= f.hidden_field :contract_revision_id %></div>
     <div><%= f.hidden_field :user_id %></div>
     <a id="toggle-edit" class="btn btn-primary" role="button">Edit Rating</a>
     <%= f.submit "Save Rating", class: "btn rating-save", disabled: "disabled" %>
