--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -25,121 +25,13 @@
     <div class="form-group row">
       <%= f.label :application, "Application", :class => "col-2 col-form-label" %>
       <div class="col-7">
-        <%= f.text_field :application, :class => "form-control", :placeholder => "Enter Contract Title" %>
+        <%= f.text_field :application, :class => "form-control", :placeholder => "Enter Contract App" %>
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :contract_date, "Date", :class => "col-2 col-form-label" %>
+      <%= f.label :contract_type, "Contract Type", :class => "col-2 col-form-label" %>
       <div class="col-7">
-        <%= f.text_field :contract_date, value: @contract.contract_date.try(:strftime, '%m/%d/%Y'), data:{ provide:'datepicker' }, :class => "form-control", :placeholder => "Enter Contract Date" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :contract_type, "Type", :class => "col-2 col-form-label" %>
-      <div class="col-7">
-        <%= f.select(:contract_type, Contract::TYPES, {},{class: 'form-control'}) %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_1, "The Right to Sue", :class => "col-md-4 col-sm-5 col-form-label" %>
-      <div class="col-2">
-        <%= f.select(:rating_1, Contract::SCORES, {}, {class: 'form-control'}) %>
-      </div>
-      <div class="col-md-4 col-sm-6">
-        <%= f.text_area :rating_1_note, :class => "form-control", :placeholder => "Enter Note", :row => 4 %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_2, "The Right to Low-Cost Arbitration", :class => "col-4 col-form-label" %>
-      <div class="col-2">
-        <%= f.select(:rating_2, Contract::SCORES, {}, {class: 'form-control'}) %>
-      </div>
-      <div class="col-4">
-        <%= f.text_area :rating_2_note, :class => "form-control", :placeholder => "Enter Note", :row => 4 %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_3, "The Right to a Class Action", :class => "col-4 col-form-label" %>
-      <div class="col-2">
-        <%= f.select(:rating_3, Contract::SCORES, {}, {class: 'form-control'}) %>
-      </div>
-      <div class="col-4">
-        <%= f.text_area :rating_3_note, :class => "form-control", :placeholder => "Enter Note", :row => 4 %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_4, "The Right to Due Process", :class => "col-4 col-form-label" %>
-      <div class="col-2">
-        <%= f.select(:rating_4, Contract::SCORES, {}, {class: 'form-control'}) %>
-      </div>
-      <div class="col-4">
-        <%= f.text_area :rating_4_note, :class => "form-control", :placeholder => "Enter Note", :row => 4 %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_5, "The Right to No Hidden Terms or Fees", :class => "col-4 col-form-label" %>
-      <div class="col-2">
-        <%= f.select(:rating_5, Contract::SCORES, {}, {class: 'form-control'}) %>
-      </div>
-      <div class="col-4">
-        <%= f.text_area :rating_5_note, :class => "form-control", :placeholder => "Enter Note", :row => 4 %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_6, "The Right to Defend Myself & Be Heard", :class => "col-4 col-form-label" %>
-      <div class="col-2">
-        <%= f.select(:rating_6, Contract::SCORES, {}, {class: 'form-control'}) %>
-      </div>
-      <div class="col-4">
-        <%= f.text_area :rating_6_note, :class => "form-control", :placeholder => "Enter Note", :row => 4 %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_7, "The Right to Control My Intellectual Property", :class => "col-4 col-form-label" %>
-      <div class="col-2">
-        <%= f.select(:rating_7, Contract::SCORES, {}, {class: 'form-control'}) %>
-      </div>
-      <div class="col-4">
-        <%= f.text_area :rating_7_note, :class => "form-control", :placeholder => "Enter Note", :row => 4 %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_8, "The Right to Freedom of Expression", :class => "col-4 col-form-label" %>
-      <div class="col-2">
-        <%= f.select(:rating_8, Contract::SCORES, {}, {class: 'form-control'}) %>
-      </div>
-      <div class="col-4">
-        <%= f.text_area :rating_8_note, :class => "form-control", :placeholder => "Enter Note", :row => 4 %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_9, "The Right to Privacy", :class => "col-4 col-form-label" %>
-      <div class="col-2">
-        <%= f.select(:rating_9, Contract::SCORES, {}, {class: 'form-control'}) %>
-      </div>
-      <div class="col-4">
-        <%= f.text_area :rating_9_note, :class => "form-control", :placeholder => "Enter Note", :row => 4 %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_10, "The Right to Reasonable Terms", :class => "col-4 col-form-label" %>
-      <div class="col-2">
-        <%= f.select(:rating_10, Contract::SCORES, {}, {class: 'form-control'}) %>
-      </div>
-      <div class="col-4">
-        <%= f.text_area :rating_10_note, :class => "form-control", :placeholder => "Enter Note", :row => 4 %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_14, "Public Placement of TOS Rating Badge", :class => "col-6 col-form-label" %>
-      <div class="col-2">
-        <%= f.select(:rating_14, Contract::BADGES, {}, {class: 'form-control'}) %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :additional_note, :class => "col-2 col-form-label" %>
-      <div class="col-7">
-        <%= f.text_area :additional_note, :class => "form-control", :placeholder => "Enter additional note", :row => 3 %>
+        <%= f.select(:contract_type, Contract::TYPES, {}, {class: 'form-control'}) %>
       </div>
     </div>
     <%= f.submit "Save", :class => "btn btn-primary" %>
