--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container pt-5">
-  <div class="col-md-9">
+  <div class="col-md-10">
     <p class="h3"><%= @company.company_name %> - <%= @company.website %></p>
 
     <% if @contracts.size > 0 %>
@@ -11,26 +11,34 @@
             <th>Application</th>
             <th>Date</th>
             <th>Type</th>
-            <th>Total Rating</th>
             <th> </th>
             <th> </th>
           </tr>
         </thead>
         <tbody>
-          <% @contracts.each do |contract| %>
+          <% @contracts.each_with_index do |contract, index| %>
             <tr>
               <th><%= contract.contract_title %></th>
               <td><%= contract.website %></td>
               <td><%= contract.application %></td>
-              <td><%= contract.contract_date.strftime('%m/%d/%Y') %></td>
-              <td><%= contract.contract_type %></td>
-              <td><%= contract.total_rating %></td>
-              <td><%= link_to 'View', company_contract_path(@company, contract) %></td>
               <td>
-                <% if user_signed_in? && current_user.admin? %>
-                  <%= link_to 'Edit', edit_company_contract_path(@company,contract) %>
+                <% if contract.contract_revisions.size > 0 %>
+                  <ul class="contract-revision-list">
+                  <% contract.contract_revisions.each do |revision| %>
+                    <li><%= link_to revision.contract_date.strftime('%m/%d/%Y'), contract_contract_revision_path(contract,revision) %></li>
+                  <% end %>
+                  </ul>
                 <% end %>
               </td>
+              <td><%= contract.contract_type %></td>
+              <% if user_signed_in? && current_user.admin? %>
+                <td>
+                  <%= link_to 'Edit', edit_company_contract_path(@company,contract) %>
+                </td>
+                <td>
+                  <%= link_to 'Add version', new_contract_contract_revision_path(contract) %>
+                </td>
+              <% end %>
             </tr>
           <% end %>
         </tbody>
