--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,7 @@
             </ul>
             <ul class="navbar-nav justify-content-end">
               <% if user_signed_in? %>
+                <li class="nav-item"><%= link_to "Profile", edit_user_registration_path, :class => "nav-link" %></li>
                 <li class="nav-item"><%= link_to "Sign out", destroy_user_session_path, method: :delete, :class => "nav-link" %></li>
               <% else %>
                 <li class="nav-item"><%= link_to "Sign In", new_user_session_path, :class => "nav-link" %></li>
