Added fine print and edited historical calculation

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -15,7 +15,7 @@
   </div>
   <div class="form-group">
     <%= f.label :website, "Website" %>
-    <%= f.text_field :website, :class => "form-control", :placeholder => "Enter URL" %>
+    <%= f.text_field :website, :class => "form-control", :placeholder => "Enter URL: Optional" %>
   </div>
   <%= f.submit "Add", :class => "btn btn-primary" %>
 <% end %>
