--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -23,7 +23,8 @@
   </div>
   <div class="row">
     <div class="col-md-7">
-      <p>Not what's you are looking for? Do you want to add to a waiting list?</p>
+      <p>Didn't find what you are looking for? Use the form below to add it to our waiting list!
+      Our team of volunteer attorneys will get to it as soon as they can!</p>
       <%= render 'form', company: @company %>
     </div>
   </div>
