--- a/app/views/contract_revisions/_contract_review.html.erb
+++ b/app/views/contract_revisions/_contract_review.html.erb
@@ -1,4 +1,5 @@
-<p class="h4">Reviewed by the following:</p>
+<p class="h4">Reviewed by the following attorneys</p>
+<%= render 'shared/fine_print' %>
 <table class="table">
   <thead>
     <tr>
