--- a/app/views/contract_revisions/show.html.erb
+++ b/app/views/contract_revisions/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container pt-5">
-  <div class="col-md-7">
+  <div class="col-md-10">
     <p class="h3"><%= @contract.company.company_name %> - <%= @contract.company.website %></p>
     <ul class="nav nav-tabs">
       <li class="nav-item">
@@ -18,6 +18,8 @@
     <!-- Tab panes -->
     <div class="tab-content">
       <div class="tab-pane active" id="contract" role="tabpanel">
+        <%= render 'shared/fine_print' %>
+        <br />
         <table class="table">
           <tbody>
             <tr>
@@ -35,6 +37,10 @@
             <tr>
               <th scope="col">Contract Type</th>
               <td><%= @contract.contract_type %></td>
+            </tr>
+            <tr>
+              <th scope="col">Direct URL to TOS</th>
+              <td><%= @contract_revision.tos_url %></td>
             </tr>
             <tr>
               <th scope="col">Contract Date</th>
@@ -132,23 +138,23 @@
             </tr>
             <tr>
               <th scope="col">Historical Fairness</th>
-              <td><%= @contract_revision.rating_11 %></td>
+              <td><%= "#{@contract_revision.rating_11.round(2)}" %></td>
             </tr>
             <tr>
               <th scope="col">Historical User Ratings</th>
-              <td><%= @contract_revision.rating_12 %></td>
+              <td><%= "#{@contract_revision.rating_12.round(2)}" %></td>
             </tr>
             <tr>
               <th scope="col">Historical Lack of Lawsuits or Arbitrations</th>
-              <td><%= @contract_revision.rating_13 %></td>
+              <td><%= "#{@contract_revision.rating_13.round(2)}" %></td>
             </tr>
             <tr>
               <th scope="col">Public Placement of TOS Rating Badge</th>
-              <td><%= @contract_revision.rating_14 %></td>
+              <td><%= "#{@contract_revision.rating_14.round(2)}" %></td>
             </tr>
             <tr>
               <th scope="col">Total Rating</th>
-              <td><%= @contract_revision.total_rating %></td>
+              <td><%= "#{@contract_revision.total_rating.round(2)}" %></td>
             </tr>
             <tr>
               <th scope="col">Additional Note</th>
@@ -160,12 +166,33 @@
             </tr>
           </tbody>
         </table>
-        <% if user_signed_in? && current_user.admin? %>
-          <%= button_to 'Edit', edit_contract_contract_revision_path(@contract, @contract_revision), method: :get, class: 'btn btn-primary' %>
-        <% end %>
+        <div class="btn-group" role="group" >
+          <% if user_signed_in? && current_user.admin? %>
+            <%= button_to 'Edit', edit_contract_contract_revision_path(@contract, @contract_revision), method: :get, class: 'btn btn-primary' %>
+          <% end %>
+          &nbsp;
+          <%= link_to 'Back', company_contracts_path(@contract.company_id), class: 'btn btn-outline-secondary' %>
+        </div>
+        <br />
+        <%= render 'shared/large_fine_print' %>
       </div>
       <div class="tab-pane" id="rating" role="tabpanel">
         <% if user_signed_in? && !current_user.admin? %>
+          <div class="col-12">
+            <p>
+            Are you a user of this particular website and have you used this PARTICULAR terms of service? If so,
+            please feel free to rate this agreement here. You do not need to be an attorney.
+            <br /><br />&nbsp;
+            A 0 means your experience with this terms of service has been terrible and that you do not like the terms.
+            <br />&nbsp;
+            A 10 means your experience with this terms of service has been wonderful and that you very much like the terms.
+            <br /><br />
+            As much as you can, please try to separate your personal feelings about the company itself and really make
+            an effort to provide an honest analysis of the contents of the actual terms of service and your interactions
+            with the company based on this particular terms of service. You may change your rating at any time.
+            </p>
+          </div>
+          <br />
           <%= render 'contract_user_rating' %>
         <% end %>
       </div>
