--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -19,19 +19,19 @@
     <div class="form-group row">
       <%= f.label :website, "Website", :class => "col-2 col-form-label" %>
       <div class="col-7">
-        <%= f.text_field :website, :class => "form-control", :placeholder => "Enter Contract Website" %>
+        <%= f.text_field :website, :class => "form-control", :placeholder => "Contract Website: Optional" %>
       </div>
     </div>
     <div class="form-group row">
       <%= f.label :application, "Application", :class => "col-2 col-form-label" %>
       <div class="col-7">
-        <%= f.text_field :application, :class => "form-control", :placeholder => "Enter Contract App" %>
+        <%= f.text_field :application, :class => "form-control", :placeholder => "Name of Mobile Application: Optional" %>
       </div>
     </div>
     <div class="form-group row">
       <%= f.label :contract_type, "Contract Type", :class => "col-2 col-form-label" %>
       <div class="col-7">
-        <%= f.select(:contract_type, Contract::TYPES, {}, {class: 'form-control'}) %>
+        <%= f.select(:contract_type, options_for_select(Contract::TYPES, f.object.contract_type), {}, {class: 'form-control'}) %>
       </div>
     </div>
     <%= f.submit "Save", :class => "btn btn-primary" %>
