--- a/app/views/websites/top_ten_unfair.html.erb
+++ b/app/views/websites/top_ten_unfair.html.erb
@@ -10,6 +10,7 @@
               <th scope="col">Contract Title</th>
               <th scope="col">Total Rating</th>
               <th scope="col"></th>
+              <th scope="col"></th>
             </tr>
           </thead>
           <tbody>
