--- a/app/views/websites/break_diving.html.erb
+++ b/app/views/websites/break_diving.html.erb
@@ -2,4 +2,10 @@
 <div class="col-10 offset-1 col-sm-8 offset-sm-2 card form">
 
   <h1>What is Break Diving?</h1>
+
+  <p>Break Diving, Inc. is the 501(c)(3) parent company of the Terms of Service Fairness Project.  TOS Fairness is brought to you by Break Diving, Inc.</p>
+
+  <p><a href="http://www.breakdiving.org">Read more about us.</a>
+   
+  <p><a href="http://www.breakdiving.org/community">Join our free international online community</a> of other people who want to help you succeed.</p>
 </div>
