--- a/app/views/websites/donate.html.erb
+++ b/app/views/websites/donate.html.erb
@@ -3,4 +3,12 @@
 
   <h1>Donate</h1>
 
+  <p>Like wikipedia, we operate wholly from financial contributions from people like you who think we're doing a great job.</p>
+
+  <p>In fact, we could do an even greater job (hiring a staff, hiring coders, reviewing more contracts and more quickly) with funding.</p>
+
+  <p>If you would like to <a href="http://www.breakdiving.org/contribute">support us</a>, please make a tax-deductible donation to our parent company, Break Diving, Inc., a 501(c)(3) not-for-profit that has brought the TOS Fairness Project to life.</p>
+
+  <p>Thank you very much for your support.  Even a donation of $1 will help us to continue pursuing our mission of full transparency across the web, across the globe.</p>
+
 </div>
