--- a/app/views/websites/rating_system.html.erb
+++ b/app/views/websites/rating_system.html.erb
@@ -8,32 +8,42 @@
   <p>Each agreement is first rated on a 0 - 50 scale, using the following criteria from our online user <a href="/bill_of_rights.html">bill of rights</a>.
 
   <ol>
-    <li><b>The Right to Sue</b> - 5 Points</li>
-    <li><b>The Right to Low-Cost Arbitration</b> - 5 Points</li>
-    <li><b>The Right to a Class Action</b> - 5 Points</li>
-    <li><b>The Right to Due Process</b> - 5 Points</li>
-    <li><b>The Right to No Hidden Terms or Fees</b> - 5 Points</li>
-    <li><b>The Right to Defend Myself & Be Heard</b> - 5 Points</li>
-    <li><b>The Right to Control My Intellectual Property</b> - 5 Points</li>
-    <li><b>The Right to Freedom of Expression</b> - 5 Points</li>
-    <li><b>The Right to Privacy</b> - 5 Points</li>
-    <li><b>The Right to Reasonable Terms</b> - 5 Points</li>
+    <!-- NUMBER ONE -->
+    <li><b>The Right to Privacy</b> - Up to 5 Points</li>
+    <!-- NUMBER TWO -->
+    <li><b>The Right to Equal, Fair, &amp; Reasonable Expression</b> - Up to 5 Points</li>
+    <!-- NUMBER THREE -->
+    <li><b>The Right to Control My Intellectual Property</b> - Up to 5 Points</li>
+    <!-- NUMBER FOUR -->
+    <li><b>The Right to Sue</b> - Up to 5 Points</li>
+    <!-- NUMBER FIVE -->
+    <li><b>The Right to Low-Cost Arbitration</b> - Up to 5 Points</li>
+    <!-- NUMBER SIX -->
+    <li><b>The Right to Join a Class Action</b> - Up to 5 Points</li>
+    <!-- NUMBER SEVEN -->
+    <li><b>The Right to No Hidden Terms or Fees</b> - Up to 5 Points</li>
+    <!-- NUMBER EIGHT -->
+    <li><b>The Right to Fair Process &amp; To Be Heard </b> - Up to 5 Points</li>
+    <!-- NUMBER NINE -->
+    <li><b>The Right To Appeal & The Right to Return </b> - Up to 5 Points</li>    
+    <!-- NUMBER TEN -->
+    <li><b>The Right to Reasonable Terms</b> - Up to 5 Points</li>
   </ol>
 
-  <p>This initial bill of rights (explained in depth on the <a href="/bill_of_rights.html">bill of rights</a> page) provides an initial potential total of 50 points based on the contract itself.  Additional points are granted in general as follows based on all prior related Terms of Service agreements:</p>
+  <p>This initial bill of rights (explained in depth on the <a href="/bill_of_rights.html">bill of rights</a> page) provides an initial potential total of 50 points based on the contract itself.  An additional 50 points are granted as follows based on all prior related versions of that Terms of Service agreement:</p>
 
   <ul>
-    <li><b>Historical Fairness</b> - 10 Points</li>
+    <li><b>Historical Fairness</b> - Up to 10 Points</li>
       <p>Have previous iterations of this Terms of Service been fair over the last 5 years?</p>
-    <li><b>Historical User Ratings</b> - 10 Points</li>
+    <li><b>Historical User Ratings</b> - Up to 10 Points</li>
       <p>Have users had good experiences with this product or service's terms of service over the last 5 years?</p>
-    <li><b>Historical Lack of Lawsuits or Arbitrations</b> - 10 Points</li>
-      <p>Has the company had very few consumer initiated lawsuits or arbitrations over the last 5 years arising out of this or prior iterations of this terms of service?</p>
-    <li><b>Public Placement of TOS Rating Badge</b> - 20 points</li>
-      <p>Does the company place their TOS Rating Badge and score prominently and publicly on the actual Terms of Service signature page, directly next to the 'clickbox'?</p>
+    <li><b>Historical Lack of Lawsuits or Arbitrations</b> - Up to 10 Points</li>
+      <p>Has the company had very few consumer initiated lawsuits or arbitrations over the last 5 years arising out of this or prior iterations of this terms of service?  The fewer legal issues that arrive in courts or in arbitration halls, the higher this number will be.</p>
+    <li><b>Public Placement of TOS Rating Score</b> - Up to 20 points</li>
+      <p>Does the company place its TOS Rating Score prominently and publicly on the actual Terms of Service signature page, directly next to the 'clickbox', clickable to its terms of service rating page for that terms of service?  It should read: "TOS Fairness Rating: #/100.  Read more." (with # replaced by the score and 'Read more' linking to our website's rating page for that company).  A company's initial score will automatically include the 20 points, and if the company does not add the score within 30 days of being reviewed, and/or fails to let us know that the score has been properly added, the 20 points will be removed from the score and updated on our website accordingly.</p>
   </ul>
 
-  <p>Together, this comes to 100.</p>
+  <p>Together, this all comes to 100 points.</p>
 
   <p>Companies that follow and adhere to the bill of rights, and treat customers fairly and with respect, will come closest to earning the coveted, but rarely earned, 100.</p>
 
