--- a/app/views/websites/volunteer.html.erb
+++ b/app/views/websites/volunteer.html.erb
@@ -3,4 +3,14 @@
 
   <h1>Volunteer With TOSfairness</h1>
 
+  <h2>Lawyers &amp; Law Students</h2>
+
+  <p>Would you like to help us help us review online terms of service agreement (it's actually really fun, and you'll learn a lto) and also help us to further refine the bill of rights and the rating scale?</p>
+
+  <p>First step: <a href="www.breakdiving.org/volunteer" target="_blank">Visit the Break Diving volunteer page</a> and follow the five steps!</p>
+
+  <p>Would you like to help us further develop this website, help us create mobile app versions of the site, and help us refine the code base to make everything run even more smoothly?</p>
+
+  <p>First step: <a href="www.breakdiving.org/volunteer" target="_blank">Visit the Break Diving volunteer page</a> and follow the five steps!</p>
+
 </div>
