--- a/app/views/websites/about.html.erb
+++ b/app/views/websites/about.html.erb
@@ -1,4 +1,5 @@
 <br><br>
+
 <div class="col-10 offset-1 col-sm-8 offset-sm-2 card form">
 
   <h1>About TOS Fairness</h1>
@@ -15,6 +16,6 @@
 
   <p>Thanks for visiting us, and please, spread the word.  The more people who know to come to TOSFairness prior to clicking "I agree", the better off the world will be!</p>
 
-  <p>NOTE: We are not a for-profit company.  All donations to Break Diving, Inc. will help to further the reach of our website, help to bring on additional staff, and ensure that the ideals of transparency espoused on this website are spread throughout the world.</p> 
+  <p>NOTE: We are not a for-profit project of Break Diving, Inc., a 501(c)(3) tax-exempt corporation.  All donations to Break Diving, Inc. will help to further the reach of our website, help to bring on additional coders and attorneys, and ensure that the ideals of transparency espoused on this website and in our bill of rights are spread throughout the world.</p> 
 
 </div>
